--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,7 @@
 name: ci-golang-workflow
-on: [push]
+on:
+  pull_request:
+    branches: [dev]
 jobs:
   check-application:
     runs-on: ubuntu-latest
@@ -7,6 +9,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: '>=1.17.0'
+          go-version: ">=1.17.0"
       - run: go test
       - run: go run math.go
