--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,10 +5,13 @@ on:
 jobs:
   check-application:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ["1.17.0", ">=1.17.0", "1.20"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: ">=1.17.0"
+          go-version: ${{ matrix.go }}
       - run: go test
       - run: go run math.go
